--- a/src/components/contents.css
+++ b/src/components/contents.css
@@ -17,9 +17,9 @@
   align-items: center;
   justify-content: center;
   left: 15.5em;
-  width: 7em;
+  width: 6em;
   height: 100%;
-  background: rgb(190, 190, 190);
+  background: #464646;
   font-family: 'S-CoreDream-3Light';
   font-size: 1.1em;
 }
@@ -38,7 +38,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  width: 40%;
+  width: 30%;
   height: 100%;
 }
 
@@ -51,8 +51,8 @@
   top: 2%;
   height: 96%;
   min-height: 75px;
-  border-left: 0.5px solid rgb(30, 30, 30);
-  border-right: 0.5px solid rgb(30, 30, 30);
+  border-left: 0.5px solid #f9f9f9;
+  border-right: 0.5px solid #f9f9f9;
 }
 
 .contents {
@@ -71,26 +71,28 @@
 .contents_title_selected {
   visibility: visible;
   display: flex;
-  margin-right: 6.6px;
+  margin-right: 6.4px;
   padding-top: 2px;
-  font-weight: bold;
+  /* font-weight: bold; */
+  color: #f9f9f9;
 }
 
 .contents_title_unselected {
   visibility: hidden;
   display: flex;
-  margin-right: 10px;
   opacity: 0;
-  transition: visibility 0s, opacity 0.5s ease-in-out;
+  transition: visibility 0s, opacity 0.3s ease-in-out;
+  margin-right: 10px;
   padding-top: 2px;
+  color: #f9f9f9;
 }
 
 .contents_dot_selected {
   display: flex;
   width: 15.11px;
   height: 15.11px;
-  background: rgb(30, 30, 30);
-  border: 1px solid rgb(30, 30, 30);
+  background: #f9f9f9;
+  border: 1px solid #f9f9f9;
   border-radius: 50%;
   margin-right: -3.6px;
 }
@@ -99,8 +101,8 @@
   display: flex;
   width: 8px;
   height: 8px;
-  background: rgb(30, 30, 30);
-  border: 1px solid rgb(30, 30, 30);
+  background: #f9f9f9;
+  border: 1px solid #f9f9f9;
   border-radius: 50%;
   transition: 0.3s ease-out;
 }
@@ -119,5 +121,6 @@
 
 .contents:not(:hover) .contents_title_unselected {
   opacity: 0;
-  transition: 0.1s ease;
+  transition: 0.2s ease;
+  margin-right: 13px;
 }
