--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -16,7 +16,8 @@
   align-items: center;
   width: 17.5em;
   height: 100vh;
-  background: rgb(200, 200, 200);
+  background: #151515;
+  color: #f9f9f9;
 }
 
 .profile_box {
