--- a/src/components/contents.css
+++ b/src/components/contents.css
@@ -12,11 +12,9 @@
 
 .contents_container {
   display: flex;
-  position: fixed;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  left: 14em;
   width: 8em;
   height: 100%;
   padding-right: 1.5em;
@@ -72,9 +70,8 @@
 .contents_title_selected {
   visibility: visible;
   display: flex;
-  margin-right: 6.5px;
+  margin-right: 14px;
   padding-top: 2px;
-  /* font-weight: bold; */
   color: #f9f9f9;
 }
 
@@ -83,19 +80,22 @@
   display: flex;
   opacity: 0;
   transition: visibility 0s, opacity 0.3s ease-in-out;
-  margin-right: 10px;
+  margin-right: 14px;
   padding-top: 2px;
   color: #f9f9f9;
 }
 
 .contents_dot_selected {
   display: flex;
-  width: 15.11px;
-  height: 15.11px;
+  /* width: 15.11px; */
+  /* height: 15.11px; */
+  width: 8px;
+  height: 8px;
   background: #f9f9f9;
   border: 1px solid #f9f9f9;
   border-radius: 50%;
-  margin-right: -3.6px;
+  transform-origin: center center;
+  transform: scale(1.75);
 }
 
 .contents_dot_unselected {
@@ -110,14 +110,13 @@
 
 .contents:hover .contents_dot_unselected {
   cursor: pointer;
-  transform: scale(1.72);
+  transform: scale(1.75);
   transition: 0.3s ease;
 }
 
 .contents:hover .contents_title_unselected {
   visibility: visible;
   opacity: 1;
-  margin-right: 10px;
 }
 
 .contents:not(:hover) .contents_title_unselected {
