--- a/src/components/01about.css
+++ b/src/components/01about.css
@@ -3,4 +3,10 @@
   width: 17.5em;
   height: 100vh;
   background-color: rgb(105, 105, 105);
+  align-items: center;
+  justify-content: center;
+}
+
+.about_title {
+  font-size: 2.5em;
 }
