--- a/src/components/02skill.css
+++ b/src/components/02skill.css
@@ -3,4 +3,10 @@
   width: 17.5em;
   height: 100vh;
   background-color: rgb(150, 150, 150);
+  align-items: center;
+  justify-content: center;
+}
+
+.skill_title {
+  font-size: 2.5em;
 }
