--- a/src/components/03work.css
+++ b/src/components/03work.css
@@ -3,4 +3,10 @@
   width: 17.5em;
   height: 100vh;
   background-color: rgb(175, 175, 175);
+  align-items: center;
+  justify-content: center;
+}
+
+.work_title {
+  font-size: 2.5em;
 }
