--- a/src/components/04contact.css
+++ b/src/components/04contact.css
@@ -3,4 +3,10 @@
   width: 17.5em;
   height: 100vh;
   background-color: rgb(200, 200, 200);
+  align-items: center;
+  justify-content: center;
+}
+
+.contact_title {
+  font-size: 2.5em;
 }
