--- a/src/components/03work.css
+++ b/src/components/03work.css
@@ -1,6 +1,6 @@
 .work_container {
   display: flex;
-  width: 17.5em;
+  width: calc(25%);
   height: 100vh;
   background-color: rgb(175, 175, 175);
   align-items: center;
