--- a/src/components/04contact.css
+++ b/src/components/04contact.css
@@ -1,6 +1,6 @@
 .contact_container {
   display: flex;
-  width: 17.5em;
+  width: calc(25%);
   height: 100vh;
   background-color: rgb(200, 200, 200);
   align-items: center;
