--- a/src/components/01about.css
+++ b/src/components/01about.css
@@ -1,6 +1,6 @@
 .about_container {
   display: flex;
-  width: 17.5em;
+  width: calc(25%);
   height: 100vh;
   background-color: rgb(105, 105, 105);
   align-items: center;
