--- a/src/components/01about.css
+++ b/src/components/01about.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'LeferiPoint-BlackA';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/LeferiPoint-BlackA.woff')
+    format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
+
 .about_container {
   display: flex;
   width: calc(25%);
@@ -7,6 +15,11 @@
   justify-content: center;
 }
 
+.about_container:hover {
+  cursor: pointer;
+}
+
 .about_title {
   font-size: 2.5em;
+  font-family: 'LeferiPoint-BlackA';
 }
