--- a/src/components/04contact.css
+++ b/src/components/04contact.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'LeferiPoint-BlackA';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/LeferiPoint-BlackA.woff')
+    format('woff');
+  font-weight: 700;
+  font-style: normal;
+}
+
 .contact_container {
   display: flex;
   width: calc(25%);
@@ -7,6 +15,11 @@
   justify-content: center;
 }
 
+.contact_container:hover {
+  cursor: pointer;
+}
+
 .contact_title {
   font-size: 2.5em;
+  font-family: 'LeferiPoint-BlackA';
 }
