--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -60,7 +60,7 @@
 .profile_break_line {
   width: 2em;
   margin: 1.5em 0 1.5em 0;
-  border-bottom: 1px solid rgb(100, 100, 100);
+  border-bottom: 1px solid #f9f9f9;
 }
 
 .profile_icon_box {
