--- a/src/components/01about.css
+++ b/src/components/01about.css
@@ -10,7 +10,8 @@
   display: flex;
   width: calc(25%);
   height: 100vh;
-  background-color: rgb(75, 75, 75);
+  color: #f9f9f9;
+  background-color: rgb(30, 30, 30);
   align-items: center;
   justify-content: center;
 }
