--- a/src/components/03work.css
+++ b/src/components/03work.css
@@ -10,7 +10,8 @@
   display: flex;
   width: calc(25%);
   height: 100vh;
-  background-color: rgb(125, 125, 125);
+  color: #f9f9f9;
+  background-color: rgb(40, 40, 40);
   align-items: center;
   justify-content: center;
 }
