--- a/src/components/04contact.css
+++ b/src/components/04contact.css
@@ -11,13 +11,20 @@
   width: calc(25%);
   height: 100vh;
   color: #f9f9f9;
-  background-color: rgb(45, 45, 45);
+  background-color: rgb(60, 60, 60);
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 .contact_container:hover {
   cursor: pointer;
+}
+
+.contact_break_line {
+  width: 1.5em;
+  margin: 1.25em 0 1.25em 0;
+  border-bottom: 1px solid #f9f9f9;
 }
 
 .contact_title {
