--- a/src/components/02skill.css
+++ b/src/components/02skill.css
@@ -11,13 +11,20 @@
   width: calc(25%);
   height: 100vh;
   color: #f9f9f9;
-  background-color: rgb(35, 35, 35);
+  background-color: rgb(40, 40, 40);
   align-items: center;
   justify-content: center;
+  flex-direction: column;
 }
 
 .skill_container:hover {
   cursor: pointer;
+}
+
+.skill_break_line {
+  width: 1.5em;
+  margin: 1.25em 0 1.25em 0;
+  border-bottom: 1px solid #f9f9f9;
 }
 
 .skill_title {
