--- a/src/components/contents.css
+++ b/src/components/contents.css
@@ -50,8 +50,9 @@
   top: 2%;
   height: 96%;
   min-height: 75px;
-  border-left: 0.01px solid #f9f9f9;
-  border-right: 0.01px solid #f9f9f9;
+  border-left: 0.1px solid #f9f9f9;
+  border-right: 0px solid #f9f9f9;
+  padding-left: 0.05px;
 }
 
 .contents {
