--- a/src/components/contents.css
+++ b/src/components/contents.css
@@ -50,8 +50,7 @@
   top: 2%;
   height: 96%;
   min-height: 75px;
-  border-left: 0.1px solid #f9f9f9;
-  /* margin-right: 0.1px; */
+  border: 0.1px solid #f9f9f9;
 }
 
 .contents {
