--- a/src/components/contents.css
+++ b/src/components/contents.css
@@ -50,7 +50,8 @@
   top: 2%;
   height: 96%;
   min-height: 75px;
-  border: 0.1px solid #f9f9f9;
+  border-right: 0.1px solid #f9f9f9;
+  padding-right: 0.1px;
 }
 
 .contents {
