--- a/src/components/contents.css
+++ b/src/components/contents.css
@@ -51,7 +51,7 @@
   height: 96%;
   min-height: 75px;
   border-right: 0.1px solid #f9f9f9;
-  padding-right: 0.2px;
+  padding-left: 0.1px;
 }
 
 .contents {
