--- a/src/components/contents.css
+++ b/src/components/contents.css
@@ -44,6 +44,8 @@
 .contents_line {
   display: flex;
   position: absolute;
+  text-align: center;
+  justify-content: center;
   align-items: flex-end;
   flex-direction: column;
   width: 0;
@@ -51,7 +53,6 @@
   height: 96%;
   min-height: 75px;
   border-right: 0.1px solid #f9f9f9;
-  padding-left: 0.1px;
 }
 
 .contents {
