--- a/src/components/contents.css
+++ b/src/components/contents.css
@@ -51,8 +51,7 @@
   top: 2%;
   height: 96%;
   min-height: 75px;
-  border-right: 0.1px solid #f9f9f9;
-  margin: 0 auto;
+  border: 1px solid #f9f9f9;
 }
 
 .contents {
