--- a/src/components/contents.css
+++ b/src/components/contents.css
@@ -47,11 +47,10 @@
   justify-content: center;
   align-items: flex-end;
   flex-direction: column;
-  width: 0;
   top: 2%;
   height: 96%;
   min-height: 75px;
-  border: 1px solid #f9f9f9;
+  border-right: 1px solid #f9f9f9;
 }
 
 .contents {
