--- a/src/components/contents.css
+++ b/src/components/contents.css
@@ -51,6 +51,7 @@
   height: 96%;
   min-height: 75px;
   border-right: 0.5px solid #f9f9f9;
+  margin-right: 0.5px;
 }
 
 .contents {
@@ -59,7 +60,7 @@
   align-items: center;
   justify-content: flex-end;
   width: 100px;
-  padding-right: 89.5px;
+  padding-right: 90px;
 }
 
 .contents:hover {
