--- a/src/components/01about.css
+++ b/src/components/01about.css
@@ -9,6 +9,7 @@
 .about_container {
   display: flex;
   width: calc(25%);
+  min-width: 15em;
   height: 100vh;
   color: #f9f9f9;
   background-color: rgb(30, 30, 30);
