--- a/src/components/03work.css
+++ b/src/components/03work.css
@@ -9,6 +9,7 @@
 .work_container {
   display: flex;
   width: calc(25%);
+  min-width: 15em;
   height: 100vh;
   color: #f9f9f9;
   background-color: rgb(50, 50, 50);
