--- a/src/components/04contact.css
+++ b/src/components/04contact.css
@@ -9,6 +9,7 @@
 .contact_container {
   display: flex;
   width: calc(25%);
+  min-width: 15em;
   height: 100vh;
   color: #f9f9f9;
   background-color: rgb(60, 60, 60);
