--- a/src/components/01about/01about.css
+++ b/src/components/01about/01about.css
@@ -14,12 +14,12 @@
   display: flex;
   width: calc(25%);
   height: 100vh;
-  color: #f9f9f9;
-  background-color: rgb(30, 30, 30);
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  transition: all 0.8s ease-in-out;
+  background: rgb(30, 30, 30);
+  color: #f9f9f9;
+  transition: width 0.7s ease-in-out;
 }
 
 .about_container {
@@ -34,6 +34,11 @@
   cursor: pointer;
 }
 
+.home_about_container:hover .home_about_title {
+  font-size: 2.1em;
+  transition: all 0.1s ease-in-out;
+}
+
 .home_about_break_line {
   width: 1.5em;
   margin: 1.25em 0 1.25em 0;
@@ -43,6 +48,7 @@
 .home_about_title {
   font-size: 1.8em;
   font-family: 'LeferiPoint-BlackA';
+  transition: all 0.1s ease-in-out;
 }
 
 /* ------------------------------------------ */
