--- a/src/components/02skill/02skill.css
+++ b/src/components/02skill/02skill.css
@@ -15,11 +15,11 @@
   width: calc(25%);
   height: 100vh;
   color: #f9f9f9;
-  background-color: rgb(40, 40, 40);
+  background: rgb(40, 40, 40);
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  transition: all 0.8s ease-in-out;
+  transition: width 0.7s ease-in-out;
 }
 
 .skill_container {
@@ -34,6 +34,11 @@
   cursor: pointer;
 }
 
+.home_skill_container:hover .home_skill_title {
+  font-size: 2.1em;
+  transition: all 0.1s ease-in-out;
+}
+
 .home_skill_break_line {
   width: 1.5em;
   margin: 1.25em 0 1.25em 0;
@@ -43,6 +48,7 @@
 .home_skill_title {
   font-size: 1.8em;
   font-family: 'LeferiPoint-BlackA';
+  transition: all 0.1s ease-in-out;
 }
 
 /* ------------------------------------------ */
