--- a/src/components/03work/03work.css
+++ b/src/components/03work/03work.css
@@ -15,11 +15,11 @@
   width: calc(25%);
   height: 100vh;
   color: #f9f9f9;
-  background-color: rgb(50, 50, 50);
+  background: rgb(50, 50, 50);
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  transition: all 0.8s ease-in-out;
+  transition: width 0.7s ease-in-out;
 }
 
 .work_container {
@@ -34,6 +34,11 @@
   cursor: pointer;
 }
 
+.home_work_container:hover .home_work_title {
+  font-size: 2.1em;
+  transition: all 0.1s ease-in-out;
+}
+
 .home_work_break_line {
   width: 1.5em;
   margin: 1.25em 0 1.25em 0;
@@ -43,6 +48,7 @@
 .home_work_title {
   font-size: 1.8em;
   font-family: 'LeferiPoint-BlackA';
+  transition: all 0.1s ease-in-out;
 }
 
 /* ------------------------------------------ */
