--- a/src/components/contents.css
+++ b/src/components/contents.css
@@ -16,7 +16,7 @@
   align-items: center;
   justify-content: center;
   width: 6em;
-  height: 100%;
+  height: 100vh;
   padding-right: 1.75em;
   background: #191919;
   font-family: 'S-CoreDream-3Light';
