--- a/src/components/contents.css
+++ b/src/components/contents.css
@@ -18,7 +18,7 @@
   width: 6em;
   height: 100vh;
   padding-right: 1.75em;
-  background: #191919;
+  background: rgb(25, 25, 25);
   font-family: 'S-CoreDream-3Light';
   font-size: 1.1em;
 }
