--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -15,7 +15,7 @@
   align-items: center;
   width: 17em;
   height: 100vh;
-  background: #191919;
+  background: rgb(25, 25, 25);
   color: #f9f9f9;
 }
 
