--- a/src/components/03work/03work.css
+++ b/src/components/03work/03work.css
@@ -27,7 +27,11 @@
 }
 
 .inactive_work_container {
-  width: 0;
+  width: 1.75em;
+}
+
+.inactive_work_container:hover {
+  cursor: pointer;
 }
 
 .home_work_container:hover {
@@ -52,10 +56,6 @@
 }
 
 /* ------------------------------------------ */
-
-.work_container:hover {
-  cursor: pointer;
-}
 
 .work_box {
   display: flex;
