--- a/src/components/01about/01about.css
+++ b/src/components/01about/01about.css
@@ -28,10 +28,13 @@
 
 .inactive_about_container {
   width: 3%;
+  transition: width 0.2s ease;
 }
 
 .inactive_about_container:hover {
   cursor: pointer;
+  width: 4.5%;
+  transition: width 0.2s ease;
 }
 
 .home_about_container:hover {
