--- a/src/components/02skill/02skill.css
+++ b/src/components/02skill/02skill.css
@@ -28,10 +28,13 @@
 
 .inactive_skill_container {
   width: 3%;
+  transition: width 0.2s ease;
 }
 
 .inactive_skill_container:hover {
   cursor: pointer;
+  width: 4.5%;
+  transition: width 0.2s ease;
 }
 
 .home_skill_container:hover {
