--- a/src/components/01about/01about.css
+++ b/src/components/01about/01about.css
@@ -49,7 +49,7 @@
 
 .inactive_about_title {
   transform: rotate(90deg);
-  margin-top: 3em;
+  margin-top: 3.25em;
   width: 6em;
   font-family: 'NEXON Lv2 Gothic';
   font-size: 1em;
@@ -58,6 +58,8 @@
   animation-delay: 0.75s;
   animation-duration: 0.75s;
   animation-fill-mode: forwards;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 .home_about_container:hover {
