--- a/src/components/01about/01about.css
+++ b/src/components/01about/01about.css
@@ -7,10 +7,10 @@
 }
 
 @font-face {
-  font-family: 'NEXON Lv2 Gothic';
-  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_20-04@2.1/NEXON Lv2 Gothic.woff')
+  font-family: 'Arita-dotum-Medium';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/Arita-dotum-Medium.woff')
     format('woff');
-  font-weight: 300;
+  font-weight: normal;
   font-style: normal;
 }
 
@@ -51,15 +51,13 @@
   transform: rotate(90deg);
   margin-top: 3.25em;
   width: 6em;
-  font-family: 'NEXON Lv2 Gothic';
+  font-family: 'Arita-dotum-Medium';
   font-size: 1em;
   opacity: 0;
   animation-name: fade-in;
   animation-delay: 0.75s;
   animation-duration: 0.75s;
   animation-fill-mode: forwards;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
 .home_about_container:hover {
