--- a/src/components/03work/03work.css
+++ b/src/components/03work/03work.css
@@ -37,13 +37,13 @@
 .inactive_work_container {
   display: flex;
   justify-content: flex-start;
-  width: 2.5%;
+  width: calc(2.5%);
   height: 100vh;
 }
 
 .inactive_work_container:hover {
   cursor: pointer;
-  width: 3.5%;
+  width: calc(3.5%);
   transition: width 0.75s ease;
 }
 
