--- a/src/components/04contact/04contact.css
+++ b/src/components/04contact/04contact.css
@@ -39,12 +39,13 @@
   justify-content: flex-start;
   width: calc(2.5%);
   height: 100vh;
+  transition: width 0.5s ease;
 }
 
 .inactive_contact_container:hover {
   cursor: pointer;
   width: calc(3.5%);
-  transition: width 0.75s ease;
+  transition: width 0.5s ease;
 }
 
 .inactive_contact_title {
@@ -111,5 +112,14 @@
   }
   to {
     opacity: 1;
+  }
+}
+
+@keyframes fold {
+  from {
+    width: calc(10%);
+  }
+  to {
+    width: calc(2.5%);
   }
 }
