--- a/src/components/contents.css
+++ b/src/components/contents.css
@@ -12,7 +12,7 @@
 
 .contents_container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 6em;
@@ -23,12 +23,34 @@
   font-size: 1.1em;
 }
 
+.contents_icon_box {
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-end;
+  width: 100%;
+  height: 4.75em;
+  padding-right: 2.5px;
+}
+
+.contents_icon_home {
+  display: flex;
+  width: 1.1em;
+  height: 1.1em;
+  transition: all 0.15s ease-in-out;
+}
+
+.contents_icon_home:hover {
+  cursor: pointer;
+  transform: scale(1.25);
+  transition: all 0.15s ease-in-out;
+}
+
 .contents_box {
   display: flex;
   align-items: center;
   justify-content: flex-end;
   width: 100%;
-  height: 65%;
+  height: 45%;
 }
 
 .contents_line_dots_container {
@@ -59,8 +81,8 @@
   position: relative;
   align-items: center;
   justify-content: flex-end;
-  width: 100px;
-  padding-right: 90px;
+  width: 150px;
+  padding-right: 140px;
 }
 
 .contents:hover {
