--- a/src/components/contents.css
+++ b/src/components/contents.css
@@ -29,6 +29,7 @@
   justify-content: flex-end;
   width: 100%;
   height: 4.75em;
+  margin-top: 0.75em;
   padding-right: 2.5px;
 }
 
@@ -36,6 +37,7 @@
   display: flex;
   width: 1.1em;
   height: 1.1em;
+
   transition: all 0.15s ease-in-out;
 }
 
@@ -81,8 +83,9 @@
   position: relative;
   align-items: center;
   justify-content: flex-end;
-  width: 150px;
-  padding-right: 140px;
+  width: 90px;
+  margin-right: 70px;
+  padding-right: 10px;
 }
 
 .contents:hover {
