--- a/src/components/profile.css
+++ b/src/components/profile.css
@@ -100,8 +100,8 @@
 
 .profile_icon_github {
   width: 30px;
-  filter: invert(99%) sepia(8%) saturate(0%) hue-rotate(324deg) brightness(113%)
-    contrast(100%);
+  filter: invert(99%) sepia(100%) saturate(0%) hue-rotate(324deg)
+    brightness(200%) contrast(100%);
 }
 
 .profile_icon_github:hover {
@@ -110,6 +110,8 @@
 
 .profile_icon_velog {
   width: 30px;
+  filter: invert(1%) sepia(10%) saturate(0%) hue-rotate(324deg) brightness(100%)
+    contrast(100%);
 }
 
 .profile_icon_velog:hover {
@@ -117,7 +119,9 @@
 }
 
 .profile_icon_email {
-  width: 30px;
+  width: 31px;
+  filter: invert(99%) sepia(10%) saturate(0%) hue-rotate(324deg)
+    brightness(300%) contrast(100%);
 }
 
 .profile_icon_email:hover {
