--- a/src/components/02skill/02skill.css
+++ b/src/components/02skill/02skill.css
@@ -45,7 +45,85 @@
   transition: all 0.1s ease-in-out;
 }
 
+.skill_line01 {
+  opacity: 0.5;
+  display: inline-block;
+  position: absolute;
+  width: 0;
+  height: 1px;
+  background-color: #ffffff;
+  top: 0;
+  left: 0;
+  transition: width 0.3s ease;
+}
+
+.home_skill_container:hover .skill_line01 {
+  width: 100%;
+  transition: width 0.3s ease;
+}
+
+.skill_line02 {
+  opacity: 0.5;
+  display: inline-block;
+  position: absolute;
+  width: 1px;
+  height: 0;
+  background-color: #ffffff;
+  bottom: 0;
+  right: 0;
+  transition: height 0.3s ease;
+}
+
+.home_skill_container:hover .skill_line02 {
+  height: 100%;
+  transition: height 0.3s ease;
+}
+
+.skill_line03 {
+  opacity: 0.5;
+  display: inline-block;
+  position: absolute;
+  width: 0;
+  height: 1px;
+  background-color: #ffffff;
+  bottom: 0;
+  right: 0;
+  transition: width 0.3s ease;
+}
+
+.home_skill_container:hover .skill_line03 {
+  width: 100%;
+  transition: width 0.3s ease;
+}
+
+.skill_line04 {
+  opacity: 0.5;
+  display: inline-block;
+  position: absolute;
+  width: 1px;
+  height: 0;
+  background-color: #ffffff;
+  top: 0;
+  left: 0;
+  transition: height 0.3s ease;
+}
+
+.home_skill_container:hover .skill_line04 {
+  height: 100%;
+  transition: height 0.3s ease;
+}
+
 .home_skill_box {
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 92%;
+  height: 97.7%;
+}
+
+.home_skill_contents {
   display: flex;
   flex-direction: column;
   justify-content: center;
