--- a/src/components/01about/01about.css
+++ b/src/components/01about/01about.css
@@ -157,6 +157,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100vh;
+  background: rgb(44, 61, 107);
   opacity: 0;
   animation-name: fade-in;
   animation-delay: 0.85s;
